--- a/public/styles.css
+++ b/public/styles.css
@@ -35,3 +35,16 @@ body {
     border-color: #29538d;
     border-radius: 4px;
 }
+
+.uploader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    max-width: 90%;
+    height: 200px;
+    max-height: 100%;
+    border: 1px solid #93b8d3;
+    border-radius: 5px;
+}
