--- a/public/styles.css
+++ b/public/styles.css
@@ -7,6 +7,21 @@ body {
     background-color: #29538d;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+header .link {
+    font-size: 40px;
+    text-decoration: none;
+    margin-top: 40px;
+}
+
+header .link:hover {
+    color: white;
+}
+
 .welcome-container {
     display: grid;
     grid-template-columns: 60% 40%;
@@ -47,4 +62,67 @@ body {
     max-height: 100%;
     border: 1px solid #93b8d3;
     border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 0 20px;
+}
+
+.userpic {
+    height: 150px;
+    max-height: 200px;
+    border-radius: 20px;
+}
+
+.find-people-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.find-people-container li {
+    display: flex;
+    margin: 50px;
+}
+
+.find-people-container p {
+    width: 100%;
+}
+
+.friends-container,
+.wannabes-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.friends-container div,
+.wannabes-container div {
+    margin: 30px;
+}
+
+.chat-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chat-messages {
+    border: 1px solid #93b8d3;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+    height: 300px;
+    width: 600px;
+    overflow-y: scroll;
+    margin-bottom: 20px;
+}
+
+.chat-input {
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 600px;
+    height: 80px;
+    color: #29538d;
+    font-size: 20px;
+}
+
+.chat-input::placeholder {
+    color: #29538d;
+    font-size: 20px;
 }
